style, auth and content changes

--- a/client/src/styles/screens/_profile.scss
+++ b/client/src/styles/screens/_profile.scss
@@ -59,6 +59,10 @@
       border-radius: 3px;
     }
   }
+
+  &__user-posts:last-child {
+    justify-content: start;
+  }
 }
 
 .profile-pic-container {
